# ros2-car

./: .gitmodules
src/vehicle_sim/octave/: control_map.m  control_map_mod.m
src/vehicle_sim/src/: bruteSolver_test.cpp  vehicle.cpp  vehicle_2d.cpp  vehicle_2d.hpp  vehicle_2d_test.cpp
src/vehicle_sim/src/configs/: toyota_86.json  tt02.json
src/vehicle_sim/src/include/: BruteSolver.cpp  BruteSolver.hpp  CSVReader.cpp  CSVReader.hpp  CSVWriter.cpp  CSVWriter.hpp  Vehicle2D.cpp  Vehicle2D.hpp  Vehicle2DConfig.cpp  Vehicle2DConfig.hpp
src/vehicle_sim/src/vehicle_control_map/: CMakeLists.txt  equilibrium_control_input.cpp  genControlMap.cpp  genControlMap.hpp  genControlMap_test.cpp
src/vehicle_sim/src/vehicle_control_map_bruteSolver/: CMakeLists.txt  csvReader_test.cpp  genControlMap.cpp  genControlMap.hpp  genControlMap_test.cpp  genControlMap_test.hpp
src/vehicle_sim/src/vehicle_control_map_bruteSolver/include/: BruteSolver.cpp  BruteSolver.hpp  CSVReader.cpp  OptSolver.cpp  OptSolver.hpp
src/vehicle_sim/src/vehicle_control_map_casadi/: genControlMap.cpp
src/vehicle_sim/src/vehicle_control_map_nlopt/: CMakeLists.txt  genControlMap.cpp  genControlMap.hpp  genControlMap_test.cpp  genControlMap_test.hpp
